force-app/volunteers/objects/VolunteerActivity__c/VolunteerActivity__c.object-meta.xml
<CustomObject>
    <label>Volunteer Activity</label>
    <nameField>
        <label>Volunteer Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>