force-app/volunteers/objects/VolunteerActivity__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>AND(OR(NOT(ISBLANK(TEXT(Status__c))), $CustomMetadata.FieldValueGroup__mdt.VolunteerActivityActiveStatuses.IncludeBlankValuesInThisGroup__c), CONTAINS($CustomMetadata.FieldValueGroup__mdt.VolunteerActivityActiveStatuses.GroupValues__c,  TEXT(Status__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>