force-app/volunteers/objects/VolunteerActivity__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <formula>AND(OR(NOT(ISBLANK(TEXT(Status__c))), $CustomMetadata.FieldValueGroup__mdt.VolunteerActivityCompletedStatuses.IncludeBlankValuesInThisGroup__c), CONTAINS($CustomMetadata.FieldValueGroup__mdt.VolunteerActivityCompletedStatuses.GroupValues__c,  TEXT(Status__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>