force-app/volunteers/objects/VolunteerActivity__c/fields/FirstShiftDateTime__c.field-meta.xml
<CustomField>
    <fullName>FirstShiftDateTime__c</fullName>
    <label>First Shift Date/Time</label>
    <type>DateTime</type>
</CustomField>