force-app/volunteers/objects/VolunteerActivity__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Volunteer Activities</relationshipLabel>
    <relationshipName>VolunteerActivities</relationshipName>
    <type>Lookup</type>
</CustomField>