force-app/volunteers/objects/VolunteerActivity__c/fields/VolunteerEvent__c.field-meta.xml
<CustomField>
    <fullName>VolunteerEvent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Event</label>
    <referenceTo>VolunteerEvent__c</referenceTo>
    <relationshipLabel>Volunteer Activities</relationshipLabel>
    <relationshipName>VolunteerActivities</relationshipName>
    <type>Lookup</type>
</CustomField>