force-app/volunteers/objects/VolunteerActivity__c/fields/VolunteerOpeningsAvailable__c.field-meta.xml
<CustomField>
    <fullName>VolunteerOpeningsAvailable__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(MaximumVolunteersAllowed__c)), NOT(ISBLANK(VolunteersAssigned__c))), IF((MaximumVolunteersAllowed__c > VolunteersAssigned__c), MaximumVolunteersAllowed__c - VolunteersAssigned__c, 0), null)</formula>
    <inlineHelpText>Maximum Volunteers Allowed - Volunteers Assigned</inlineHelpText>
    <label>Volunteer Openings Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>