force-app/volunteers/objects/VolunteerActivity__c/fields/VolunteersStillNeeded__c.field-meta.xml
<CustomField>
    <fullName>VolunteersStillNeeded__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(MinimumVolunteersNeeded__c)), NOT(ISBLANK(VolunteersAssigned__c))), IF((MinimumVolunteersNeeded__c > VolunteersAssigned__c), MinimumVolunteersNeeded__c - VolunteersAssigned__c, 0), null)</formula>
    <inlineHelpText>Minimum Volunteers Needed - Volunteers Assigned</inlineHelpText>
    <label>Volunteers Still Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>